fixed the horizontal scrollbar glitch

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,6 @@ body {
   scroll-behavior: smooth;
   margin: 0;
   padding: 4em 0 0 0;
-  /* overflow-x: hidden; */
   height: 100vh;
   width: 100vw;
   transition: all 0.5s ease-in-out;
@@ -672,7 +671,7 @@ form {
   backdrop-filter: blur(var(--blur));
   border-radius: var(--radius-out) 0 0 var(--radius-out);
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
   overflow: hidden;
   max-width: 50px;
 }
@@ -911,4 +910,8 @@ form {
     display: flex;
     align-items: center;
   }
+}
+
+section{
+  overflow-x: hidden;
 }
